Implemented project renderer

--- a/data/project-data.json
+++ b/data/project-data.json
@@ -14,7 +14,8 @@
     "links": [
       {
         "svg": "<svg xmlns=\"http://www.w3.org/2000/svg\" class=\"icon icon-tabler icon-tabler-external-link\" width=\"20\" height=\"20\" viewBox=\"0 0 24 24\" stroke-width=\"1.5\" stroke=\"#ffffff\" fill=\"none\" stroke-linecap=\"round\" stroke-linejoin=\"round\">\n                                  <path stroke=\"none\" d=\"M0 0h24v24H0z\" fill=\"none\"/>\n                                  <path d=\"M11 7h-5a2 2 0 0 0 -2 2v9a2 2 0 0 0 2 2h9a2 2 0 0 0 2 -2v-5\" />\n                                  <line x1=\"10\" y1=\"14\" x2=\"20\" y2=\"4\" />\n                                  <polyline points=\"15 4 20 4 20 9\" />\n                                </svg>",
-        "link": "<a href=\"https://hrus.in/berg\" target=\"_blank\">hrus.in/berg</a>"
+        "link": "<a href=\"https://hrus.in/berg\" target=\"_blank\">hrus.in/berg</a>",
+        "id": "classberg-static-tooltip"
       },
       {
         "svg": "<svg xmlns=\"http://www.w3.org/2000/svg\" class=\"icon icon-tabler icon-tabler-external-link\" width=\"20\" height=\"20\" viewBox=\"0 0 24 24\" stroke-width=\"1.5\" stroke=\"#ffffff\" fill=\"none\" stroke-linecap=\"round\" stroke-linejoin=\"round\">\n                                  <path stroke=\"none\" d=\"M0 0h24v24H0z\" fill=\"none\"/>\n                                  <path d=\"M11 7h-5a2 2 0 0 0 -2 2v9a2 2 0 0 0 2 2h9a2 2 0 0 0 2 -2v-5\" />\n                                  <line x1=\"10\" y1=\"14\" x2=\"20\" y2=\"4\" />\n                                  <polyline points=\"15 4 20 4 20 9\" />\n                                </svg>",
