--- a/data/project-data.json
+++ b/data/project-data.json
@@ -7,6 +7,9 @@
       "height": 125
     },
     "heading": "ClassBerg",
+    "story": [
+      "When I was preparing for the MHT-CET, which is an engineering entrance exam, I was studying independently"
+    ],
     "description": [
       "ClassBerg was meant to be a SaaS which provided engineering coaching classes with a student testing framework, virtual classrooms, and a question database.",
       "ClassBerg is now a freelance project which I customize as per individual classes' requirements and provision servers for on their behalf, usually using <a href=\"https://heroku.com\" class=\"a\" target=\"_blank\">Heroku</a> and <a href=\"https://aws.amazon.com\" class=\"a\" target=\"_blank\">AWS</a>."
@@ -33,6 +36,9 @@
       "height": 125
     },
     "heading": "ClassBerg x EXED IIT",
+    "story": [
+
+    ],
     "description": [
       "A customized installation of ClassBerg's source code for <a href=\"https://exedindia.com\" class=\"a\" target=\"_blank\">EXED IIT's domain</a>, with features including student attendance tracking, assignment creation and submission, and test creation from uploaded .docx files using <a href=\"#docxlatex\" class=\"a\">docxlatex</a>.",
       "Designed specifically for serving low traffic with low compute power servers."
@@ -48,6 +54,9 @@
       "height": 125
     },
     "heading": "Chess Engine",
+    "story": [
+
+    ],
     "description": [
       "A python implementation of a chess engine from scratch.",
       "Features a bitboard representation and API, move generation API, PGN parsing, and alpha-beta pruned search with move ordering."
@@ -68,6 +77,9 @@
       "height": 125
     },
     "heading": "docxlatex",
+    "story": [
+
+    ],
     "description": [
       "docxlatex is a python module for extracting text from .docx files, including support for mathematical and chemical equations, primarily for use with tools like MathJax.",
       "It also includes support for extracting images and conversion of extracted equations into LaTeX syntax."
@@ -93,6 +105,9 @@
       "height": 125
     },
     "heading": "MJXGUI",
+    "story": [
+
+    ],
     "description": [
       "MJXGUI is an equation editor for the web for building mathematical and chemical equations with a GUI similar to Google Docs or Microsoft Word. It supports conversion of the entered equations into LaTeX for storage and rendering using tools like MathJax.",
       ["Try the demo below to create an equation.", "mobile-hide"],
@@ -119,6 +134,9 @@
   "lifenotes": {
     "logo": null,
     "heading": "LifeNotes",
+    "story": [
+
+    ],
     "description": [
       "LifeNotes is a timeline web app that allows you to create interactive, shareable timelines in the browser.",
       "You can tag notes and search and filter between different tags to find notes faster.",
@@ -141,6 +159,9 @@
   "otshare": {
     "logo": null,
     "heading": "OTShare",
+    "story": [
+
+    ],
     "description": [
       "OTShare allows you to send data securely from a public computer to your devices, or for other users to send you anonymous messages",
       "It uses one time passwords to eliminate the need for you to log into any service, but at the same time allows you to control who can send you messages."
