--- a/data/project-data.json
+++ b/data/project-data.json
@@ -15,7 +15,7 @@
       "Following this, I approached the technology incubator at the College of Engineering, Pune, and presented my idea to them. They agreed to incubate my platform, and I worked with them for the next few months."
     ],
     "description": [
-      "ClassBerg was meant to be a SaaS which provided engineering coaching classes with a student testing framework, virtual classrooms, and a question database.",
+      "ClassBerg was meant to be a SaaS which provided Indian coaching classes with a student testing framework, virtual classrooms, and a question database.",
       "ClassBerg is now a freelance project which I customize as per individual classes' requirements and provision servers for on their behalf, usually using <a href=\"https://heroku.com\" class=\"a\" target=\"_blank\">Heroku</a> and <a href=\"https://aws.amazon.com\" class=\"a\" target=\"_blank\">AWS</a>."
     ],
     "links": [
