--- a/data/project-data.json
+++ b/data/project-data.json
@@ -150,7 +150,8 @@
       "path": "images/mjxgui.svg",
       "alt": "MJXGUI.js",
       "width": 60,
-      "height": 75
+      "height": 75,
+      "id": "mjxgui-logo"
     },
     "heading": "MJXGUI",
     "description": [
