--- a/data/project-data.json
+++ b/data/project-data.json
@@ -156,8 +156,8 @@
     },
     "heading": "MJXGUI",
     "description": [
+      ["Try the demo below to create an equation!", "mobile-hide"],
       "MJXGUI is an equation editor for the web for building mathematical and chemical equations with a GUI similar to Google Docs or Microsoft Word. It supports conversion of the entered equations into LaTeX for storage and rendering using tools like MathJax.",
-      ["Try the demo below to create an equation.", "mobile-hide"],
       ["MJXGUI does not support all of its features on mobile devices.", "message-warning", "mobile-element", "mt-20"]
     ],
     "links": [
